data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2285.wast
;; 6. **Unreachable Code Handling**:    - Create a block with an intentional unreachable code path (`unreachable`, `br_if 0`). Confirm that the unreachable code does not affect the conditional branch evaluation.        Constraints: Ensures `br_if` evaluates and processes the condition correctly even within an `unreachable` path.

(assert_invalid
  (module
    (func
      (block (result i32)
        (br_if 0 (i32.const 1))
        (unreachable)
        (i32.const 42)
      )
    )
  )
  "type mismatch"
)